--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-dash==2.3.1
-dash_auth==1.4.1
-dash_bootstrap_components==1.1.0
-dash_bootstrap_templates==1.0.5
-geopy==2.2.0
-pandas==1.4.2
-plotly==5.8.0
-python_box==6.0.2
-tables
-pyyaml
-gunicorn
+# PYTHON 3.8.13
+
+# available in conda-forge
+pandas==1.5.1
+dash==2.7.0
+dash-auth==1.4.1
+dash-bootstrap-components==1.2.1
+plotly==5.11.0
+geopy==2.3.0
+python_box==6.1.0
+pyyaml==6.0
+
+# pip exclusive (available in conda with different name)
+tables==3.7.0 # pytables 3.7.0 in conda-forge
+
+# pip only
+dash-bootstrap-templates==1.0.7
+
+# server only
+gunicorn==20.1.0
